month readings and sending emails

--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "homepage": "https://github.com/peeterliik/water-meter#readme",
   "dependencies": {
     "16": "0.0.2",
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "nodemailer": "^6.7.2"
+    "mongoose": "^6.2.9",
+    "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15"
   }
 }
